EjercicioPromedios/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios
-d
C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\Principal.java
<---- end of javadoc command ---->
Loading source file C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\Principal.java...
C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\Principal.java:28: error: illegal start of expression
        System.out.println("Promedio de habitantes: " + planeta.calculaPromHabitantes() );*/
                                                                                          ^
C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\Principal.java:28: error: illegal start of expression
        System.out.println("Promedio de habitantes: " + planeta.calculaPromHabitantes() );*/
                                                                                           ^
C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\Principal.java:29: error: illegal start of expression
   }
   ^
C:\Users\SERVER\Documents\Herencia-y-Polimorfismo\EjercicioPromedios\Principal.java:30: error: reached end of file while parsing
}
 ^
4 errors
